--- a/new_file1.html
+++ b/new_file1.html
@@ -106,8 +106,8 @@
 				mes: 'e',
 				asd: 'e1'
 			}, {
-				mes: 'f',
-				asd: 'f1'
+				mes: 'g',
+				asd: 'g1'
 			}, ]
 			var stylec = {
 				color: 'red',
@@ -126,7 +126,7 @@
 					pick: "2",
 					selected: [],
 					os: os,
-					selected1: "a"
+					selected1: ''
 				},
 				methods: {
 					aa: function() {
