--- a/new_file.html
+++ b/new_file.html
@@ -4,6 +4,30 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<style>
+			p {
+				float: left;
+				margin-left: 50px;
+				background-color: #a5a5a5;
+			}
+			
+			ul,
+			li {list-style: none;
+				margin: 0;
+				padding: 0;
+			}
+			 li{
+				padding: 10px 0;
+				border-bottom: 1px solid red;
+			}
+			a{
+				text-decoration: none;
+			}
+			.user {
+				margin-left: 50px;
+				float: left;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -16,10 +40,10 @@
 					<a>/user/foo</a>
 				</router-link>
 				<router-link to="/user/foo/profile" tag="li">
-					<a>/user/foo/profile</a>
+					<a>/user/rty/profile</a>
 				</router-link>
 				<router-link to="/user/foo/posts" tag="li">
-					<a>/user/foo/posts</a>
+					<a>/user/ytr/posts</a>
 				</router-link>
 			</p>
 			<router-view></router-view>
