--- a/new_file2.html
+++ b/new_file2.html
@@ -9,6 +9,7 @@
 	<body>
 		<div id="app">
 			<input v-model="newTodoText" v-on:keyup.enter="addNewTodo" placeholder="Add a todo">
+			<button v-on:click="addNewTodo">sad</button>
 			<ul>
 				<li is="todo-item" v-for="(todo, index) in todos" v-bind:title="todo" v-on:remove="todos.splice(index, 1)"></li>
 			</ul>
